# telegram-scraper-open

./: .editorconfig  .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
src/telegram_intel_scraper/: main.py
src/telegram_intel_scraper/core/: config.py  mongo.py  scrape.py  state.py  writer.py
src/telegram_intel_scraper/providers/: call_to_webhook.py  sentiment.py  telegram.py  text_translate_genai.py  text_translate_ollama.py  title_genai.py  title_llm.py  topic_classifier.py
src/telegram_intel_scraper/repositories/: articles_repository.py
src/telegram_intel_scraper/utils/: text.py
tests/: test_config.py  test_iter_channel_messages.py  test_telegram.py
